# components/approval/backend/src/main/api/openapi.yml
@@ -193,6 +193,36 @@ paths:
         201:
           description: Successful operation.
 
+  '/change-assignment/{taskId}':
+    parameters:
+      - in: path
+        name: taskId
+        schema:
+          type: string
+        description: Task id.
+        required: true
+      - in: header
+        name: X-Current-User-ID
+        description: Specifies the id of current user.
+        schema:
+          type: string
+        required: true
+    post:
+      summary: Change assignment of the task.
+      tags:
+        - User Task Assignment
+      requestBody:
+        description: Payload to be added to the process instance on task completion.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TaskAssignment'
+      operationId: submitTaskAssignmentChange
+      responses:
+        201:
+          description: Successful operation.
+
+
 components:
   schemas:
 
@@ -326,6 +356,31 @@ components:
           description: Optional comment.
       required:
         - action
+
+    TaskAssignment:
+      type: object
+      properties:
+        deleteCandidateGroups:
+          type: array
+          items:
+            type: string
+        deleteCandidateUsers:
+          type: array
+          items:
+            type: string
+        addCandidateGroups:
+          type: array
+          items:
+            type: string
+        addCandidateUsers:
+          type: array
+          items:
+            type: string
+      required:
+        - deleteCandidateGroups
+        - deleteCandidateUsers
+        - addCandidateGroups
+        - addCandidateUsers
 
     Environment:
       type: object
